Ændret på cardsection

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <hr>
         <br>
 
-        <section class="kortsection">
+        <section class="kortsectionone">
             <div class="halv" id="fans">
                 <div id="tekst">
                     <h3>Nyhed</h3>
@@ -65,7 +65,7 @@
             </div>
         </section>
 <br>
-        <section class="kortsection">
+        <section class="kortsectiontwo">
             <div class="kvart" id="mål">
                 <div id="tekst">
                     <h3>Nyhed</h3>
