færdig med transition og animation i html og css
færdig med transition og animation i html og css

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
             <div id="mainbillede"> </div>
         </section>
 
+        <div>
+            <img id="bold" src="images/bold.png" alt="bold">
+        </div>
+
         <h1>Nyheder</h1>
         <br>
         <hr>
