Nu forsætter animationen hele tiden
Nu forsætter animationen hele tiden

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </section>
 <br>
         <section class="kortsectiontwo">
-            <div class="kvart" id="mål">
+            <div class="kvart" id="maal">
                 <div id="tekst">
                     <h3>Nyhed</h3>
                     <br>
