--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
             <div id="mainbillede"> </div>
         </section>
 
+        <div>
+            <img id="bold" src="images/bold.png" alt="bold">
+        </div>
+
         <h1>Nyheder</h1>
         <br>
         <hr>
@@ -66,7 +70,7 @@
         </section>
 <br>
         <section class="kortsectiontwo">
-            <div class="kvart" id="mål">
+            <div class="kvart" id="maal">
                 <div id="tekst">
                     <h3>Nyhed</h3>
                     <br>
